# quadrotor_control

./: CMakeLists.txt  package.xml  readme.md
msg/: ErrorMarker.msg
scripts/: actuate.py  error.py  pid.py  test.py
scripts/trajectories/: square.csv
